# Multivariate-Kelly-Criterion-and-Expected-Value-Optimization

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
api_service/: main.py
api_service/routers/: kelly_router.py
api_service/schemas/: market_data.py
data/ingestion/: odds_api.py
data/processing/: liquidity.py
front_office/streamlit/: app.py
front_office/vba/: SABR_Integration.vba
front_office/web/: app.js  index.html  style.css
quant_engine/math/: interpolation.py  monte_carlo.py  probability.py  shin.py
quant_engine/models/: merton_jd.py  sabr.py  yield_curve.py
quant_engine/portfolio_optimization/: __init__.py  kelly.py  multivariate.py
quant_engine/simulation/: __init__.py  backtest.py  bayesian.py  run_simulation.py
reports/: simulation_report.md  simulation_results.csv
