[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-infrastructure"
version = "0.1.0"
description = "Advanced Quantitative Infrastructure: SABR and Merton Jump-Diffusion Models"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Quantitative Engineering Team", email = "quant@example.com"}
]
dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "numba>=0.58.0",
    "pandas>=2.1.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.4.0",
    "streamlit>=1.27.0",
    "yfinance>=0.2.28"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black",
    "flake8",
    "mypy"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["quant_engine*", "api_service*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
